[package]
name = "trade-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
trade-log-writer = []

[dependencies]
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-service-bus-tcp-client = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-service-bus-tcp-client.git" }
my-service-bus-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-service-bus-abstractions.git" }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
my-service-bus-macros = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-service-bus-macros.git" }


lazy_static = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde = "*"
serde_json = "*"
prost = "*"
prost-types = "*"
