[package]
name = "trade-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
trade-log-writer = []

[dependencies]
service-sdk = { tag = "0.2.3", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "grpc",
    "my-service-bus",
    "macros",

] }

lazy_static = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde = "*"
serde_json = "*"
prost = "*"
prost-types = "*"
